[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/level_1_1_info.gd" type="Script" id=1]
[ext_resource path="res://sources/tilesets/factory.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/scene_enemy_robot.tscn" type="PackedScene" id=3]
[ext_resource path="res://sources/images/sprite_floor_tiles/sprite_factory_assets/sprite_factoryasset03.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="RoomRoot" type="Node2D"]

script/script = ExtResource( 1 )
spawn_location = Vector2( 1088, 864 )

[node name="TileMap" type="TileMap" parent="." groups=[
"walls",
]]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 0.1
collision/bounce = 1.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -131056, 5, -131055, 11, -131054, 9, -131053, 11, -131052, 3, -65520, 5, -65519, 12, -65518, 12, -65517, 12, -65516, 3, -65507, 5, -65506, 11, -65505, 11, -65504, 7, -65503, 11, -65502, 11, -65501, 11, -65500, 11, -65499, 9, -65498, 11, -65497, 11, -65496, 11, -65495, 3, 65535, 5, 0, 11, 1, 9, 2, 11, 3, 11, 4, 3, 16, 5, 17, 6, 18, 6, 19, 6, 20, 11, 21, 11, 22, 11, 23, 11, 24, 11, 25, 7, 26, 11, 27, 3, 29, 5, 30, 12, 31, 12, 32, 12, 33, 12, 34, 12, 35, 12, 36, 12, 37, 12, 38, 12, 39, 12, 40, 12, 41, 11, 42, 3, 131071, 5, 65536, 12, 65537, 12, 65538, 12, 65539, 12, 65540, 3, 65552, 5, 65553, 2, 65554, 0, 65555, 6, 65556, 12, 65557, 12, 65558, 12, 65559, 12, 65560, 12, 65561, 12, 65562, 12, 65563, 11, 65564, 11, 65565, 11, 65566, 6, 65567, 2, 65568, 6, 65569, 6, 65570, 6, 65571, 6, 65572, 6, 65573, 6, 65574, 6, 65575, 6, 65576, 6, 65577, 12, 65578, 3, 196607, 5, 131072, 6, 131073, 6, 131074, 6, 131075, 6, 131076, 11, 131077, 11, 131078, 11, 131079, 9, 131080, 11, 131081, 11, 131082, 11, 131083, 11, 131084, 11, 131085, 7, 131086, 11, 131087, 11, 131088, 11, 131089, 6, 131090, 0, 131091, 6, 131092, 6, 131093, 6, 131094, 6, 131095, 6, 131096, 6, 131097, 6, 131098, 6, 131099, 12, 131100, 12, 131101, 12, 131102, 6, 131103, 0, 131104, 0, 131105, 0, 131106, 0, 131107, 0, 131108, 0, 131109, 0, 131110, 0, 131111, 0, 131112, 6, 131113, 6, 131114, 3, 262143, 5, 196608, 6, 196609, 0, 196610, 0, 196611, 6, 196612, 12, 196613, 12, 196614, 12, 196615, 12, 196616, 12, 196617, 12, 196618, 12, 196619, 12, 196620, 12, 196621, 12, 196622, 12, 196623, 12, 196624, 12, 196625, 6, 196626, 0, 196627, 0, 196628, 0, 196629, 0, 196630, 0, 196631, 0, 196632, 0, 196633, 0, 196634, 0, 196635, 0, 196636, 0, 196637, 0, 196638, 0, 196639, 0, 196640, 0, 196641, 0, 196642, 0, 196643, 0, 196644, 0, 196645, 0, 196646, 0, 196647, 0, 196648, 0, 196649, 6, 196650, 3, 327679, 5, 262144, 2, 262145, 0, 262146, 0, 262147, 6, 262148, 6, 262149, 6, 262150, 6, 262151, 6, 262152, 6, 262153, 6, 262154, 6, 262155, 6, 262156, 6, 262157, 6, 262158, 6, 262159, 6, 262160, 6, 262161, 6, 262162, 0, 262163, 0, 262164, 0, 262165, 0, 262166, 0, 262167, 0, 262168, 0, 262169, 0, 262170, 0, 262171, 0, 262172, 0, 262173, 0, 262174, 0, 262175, 0, 262176, 0, 262177, 0, 262178, 0, 262179, 0, 262180, 0, 262181, 0, 262182, 0, 262183, 0, 262184, 0, 262185, 6, 262186, 3, 393215, 5, 327680, 6, 327681, 0, 327682, 0, 327683, 0, 327684, 0, 327685, 0, 327686, 0, 327687, 0, 327688, 0, 327689, 0, 327690, 0, 327691, 0, 327692, 0, 327693, 0, 327694, 0, 327695, 0, 327696, 0, 327697, 0, 327698, 0, 327699, 0, 327700, 0, 327701, 0, 327702, 0, 327703, 0, 327704, 0, 327705, 0, 327706, 0, 327707, 11, 327708, 11, 327709, 10, 327710, 6, 327711, 0, 327712, 0, 327713, 0, 327714, 0, 327715, 0, 327716, 0, 327717, 0, 327718, 0, 327719, 0, 327720, 0, 327721, 6, 327722, 3, 458742, 5, 458743, 11, 458744, 11, 458745, 7, 458746, 11, 458747, 9, 458748, 11, 458749, 11, 458751, 5, 393216, 6, 393217, 0, 393218, 0, 393219, 0, 393220, 0, 393221, 0, 393222, 0, 393223, 0, 393224, 0, 393225, 0, 393226, 0, 393227, 0, 393228, 0, 393229, 0, 393230, 0, 393231, 0, 393232, 0, 393233, 0, 393234, 0, 393235, 0, 393236, 0, 393237, 0, 393238, 0, 393239, 0, 393240, 0, 393241, 0, 393242, 0, 393243, 12, 393244, 12, 393245, 10, 393246, 6, 393247, 0, 393248, 0, 393249, 0, 393250, 0, 393251, 0, 393252, 0, 393253, 0, 393254, 0, 393255, 0, 393256, 0, 393257, 6, 393258, 3, 524277, 5, 524278, 11, 524279, 12, 524280, 12, 524281, 12, 524282, 12, 524283, 12, 524284, 12, 524285, 12, 524286, 11, 524287, 11, 458752, 6, 458753, 0, 458754, 0, 458755, 0, 458756, 0, 458757, 0, 458758, 0, 458759, 0, 458760, 0, 458761, 0, 458762, 0, 458763, 0, 458764, 0, 458765, 0, 458766, 0, 458767, 0, 458768, 0, 458769, 0, 458770, 0, 458771, 0, 458772, 0, 458773, 0, 458774, 0, 458775, 0, 458776, 0, 458777, 0, 458778, 0, 458779, 6, 458780, 3, 458781, 5, 458782, 6, 458783, 0, 458784, 0, 458785, 0, 458786, 0, 458787, 0, 458788, 0, 458789, 0, 458790, 0, 458791, 0, 458792, 0, 458793, 1, 458794, 3, 589813, 5, 589814, 12, 589815, 6, 589816, 6, 589817, 1, 589818, 1, 589819, 1, 589820, 6, 589821, 6, 589822, 12, 589823, 12, 524288, 6, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 0, 524306, 0, 524307, 0, 524308, 0, 524309, 0, 524310, 0, 524311, 0, 524312, 0, 524313, 0, 524314, 0, 524315, 6, 524316, 3, 524317, 5, 524318, 6, 524319, 0, 524320, 0, 524321, 0, 524322, 0, 524323, 0, 524324, 0, 524325, 0, 524326, 0, 524327, 0, 524328, 0, 524329, 1, 524330, 3, 655349, 5, 655350, 6, 655351, 0, 655352, 0, 655353, 0, 655354, 0, 655355, 0, 655356, 0, 655357, 0, 655358, 0, 655359, 0, 589824, 0, 589825, 0, 589826, 0, 589827, 0, 589828, 0, 589829, 0, 589830, 0, 589831, 0, 589832, 0, 589833, 0, 589834, 0, 589835, 0, 589836, 0, 589837, 0, 589838, 0, 589839, 0, 589840, 0, 589841, 0, 589842, 0, 589843, 0, 589844, 0, 589845, 6, 589846, 6, 589847, 6, 589848, 6, 589849, 6, 589850, 6, 589851, 6, 589852, 3, 589853, 5, 589854, 6, 589855, 0, 589856, 0, 589857, 0, 589858, 0, 589859, 0, 589860, 0, 589861, 0, 589862, 0, 589863, 0, 589864, 0, 589865, 1, 589866, 3, 720885, 5, 720886, 2, 720887, 0, 720888, 0, 720889, 0, 720890, 0, 720891, 0, 720892, 0, 720893, 0, 720894, 0, 720895, 0, 655360, 0, 655361, 0, 655362, 0, 655363, 0, 655364, 0, 655365, 0, 655366, 0, 655367, 0, 655368, 0, 655369, 0, 655370, 0, 655371, 0, 655372, 0, 655373, 0, 655374, 0, 655375, 0, 655376, 0, 655377, 0, 655378, 0, 655379, 6, 655380, 6, 655381, 6, 655389, 5, 655390, 6, 655391, 0, 655392, 0, 655393, 0, 655394, 0, 655395, 0, 655396, 0, 655397, 0, 655398, 0, 655399, 0, 655400, 0, 655401, 6, 655402, 3, 786415, 5, 786416, 11, 786417, 11, 786418, 11, 786419, 11, 786420, 11, 786421, 11, 786422, 6, 786423, 0, 786424, 0, 786425, 0, 786426, 0, 786427, 0, 786428, 0, 786429, 0, 786430, 6, 786431, 3, 720896, 5, 720897, 6, 720898, 0, 720899, 0, 720900, 0, 720901, 0, 720902, 0, 720903, 0, 720904, 0, 720905, 0, 720906, 0, 720907, 0, 720908, 0, 720909, 0, 720910, 0, 720911, 0, 720912, 0, 720913, 0, 720914, 0, 720915, 6, 720916, 3, 720925, 5, 720926, 6, 720927, 6, 720928, 0, 720929, 0, 720930, 0, 720931, 0, 720932, 0, 720933, 0, 720934, 0, 720935, 0, 720936, 0, 720937, 6, 720938, 3, 851950, 5, 851951, 11, 851952, 12, 851953, 12, 851954, 12, 851955, 12, 851956, 12, 851957, 12, 851958, 6, 851959, 0, 851960, 0, 851961, 0, 851962, 0, 851963, 0, 851964, 0, 851965, 0, 851966, 6, 851967, 3, 786432, 5, 786433, 6, 786434, 0, 786435, 6, 786436, 6, 786437, 6, 786438, 6, 786439, 6, 786440, 6, 786441, 1, 786442, 1, 786443, 1, 786444, 6, 786445, 6, 786446, 6, 786447, 6, 786448, 6, 786449, 6, 786450, 0, 786451, 6, 786452, 3, 786462, 5, 786463, 6, 786464, 0, 786465, 0, 786466, 0, 786467, 0, 786468, 0, 786469, 0, 786470, 0, 786471, 0, 786472, 0, 786473, 6, 786474, 3, 917486, 5, 917487, 12, 917488, 0, 917489, 0, 917490, 0, 917491, 0, 917492, 0, 917493, 0, 917494, 0, 917495, 0, 917496, 0, 917497, 0, 917498, 0, 917499, 0, 917500, 0, 917501, 0, 917502, 6, 917503, 3, 851968, 5, 851969, 6, 851970, 0, 851971, 6, 851972, 3, 851984, 5, 851985, 6, 851986, 0, 851987, 6, 851988, 3, 851998, 5, 851999, 6, 852000, 0, 852001, 0, 852002, 0, 852003, 0, 852004, 0, 852005, 0, 852006, 0, 852007, 0, 852008, 0, 852009, 6, 852010, 3, 983022, 5, 983023, 0, 983024, 0, 983025, 0, 983026, 0, 983027, 0, 983028, 0, 983029, 0, 983030, 0, 983031, 0, 983032, 0, 983033, 0, 983034, 0, 983035, 0, 983036, 0, 983037, 0, 983038, 6, 983039, 3, 917504, 5, 917505, 6, 917506, 6, 917507, 6, 917508, 3, 917520, 5, 917521, 6, 917522, 6, 917523, 6, 917524, 3, 917534, 5, 917535, 6, 917536, 0, 917537, 0, 917538, 0, 917539, 0, 917540, 0, 917541, 0, 917542, 0, 917543, 0, 917544, 0, 917545, 6, 917546, 3, 1048558, 5, 1048559, 0, 1048560, 0, 1048561, 0, 1048562, 3, 1048565, 5, 1048566, 6, 1048567, 0, 1048568, 0, 1048569, 0, 1048570, 0, 1048571, 0, 1048572, 0, 1048573, 0, 1048574, 6, 1048575, 3, 983070, 5, 983071, 6, 983072, 0, 983073, 0, 983074, 0, 983075, 0, 983076, 0, 983077, 0, 983078, 0, 983079, 0, 983080, 0, 983081, 6, 983082, 3, 1114094, 5, 1114095, 0, 1114096, 0, 1114097, 3, 1114102, 5, 1114103, 6, 1114104, 6, 1114105, 6, 1114106, 6, 1114107, 6, 1114108, 6, 1114109, 6, 1114110, 3, 1048606, 5, 1048607, 6, 1048608, 0, 1048609, 0, 1048610, 0, 1048611, 0, 1048612, 0, 1048613, 0, 1048614, 0, 1048615, 0, 1048616, 0, 1048617, 2, 1048618, 3, 1179630, 5, 1179631, 0, 1179632, 0, 1179633, 3, 1114142, 5, 1114143, 6, 1114144, 0, 1114145, 0, 1114146, 0, 1114147, 0, 1114148, 0, 1114149, 0, 1114150, 0, 1114151, 0, 1114152, 0, 1114153, 6, 1114154, 3, 1245166, 5, 1245167, 0, 1245168, 0, 1245169, 3, 1179678, 5, 1179679, 6, 1179680, 0, 1179681, 0, 1179682, 0, 1179683, 0, 1179684, 0, 1179685, 0, 1179686, 0, 1179687, 0, 1179688, 6, 1179689, 6, 1179690, 3, 1310702, 5, 1310703, 0, 1310704, 0, 1310705, 3, 1245214, 5, 1245215, 6, 1245216, 6, 1245217, 0, 1245218, 0, 1245219, 0, 1245220, 0, 1245221, 0, 1245222, 6, 1245223, 6, 1245224, 6, 1376238, 5, 1376239, 0, 1376240, 0, 1376241, 3, 1310751, 15, 1310752, 6, 1310753, 6, 1310754, 0, 1310755, 0, 1310756, 6, 1310757, 6, 1310758, 6, 1441771, 5, 1441772, 11, 1441773, 11, 1441774, 11, 1441775, 0, 1441776, 0, 1441777, 11, 1441778, 11, 1441779, 11, 1441780, 3, 1376288, 15, 1376289, 5, 1376290, 0, 1376291, 0, 1376292, 3, 1507306, 5, 1507307, 11, 1507308, 12, 1507309, 12, 1507310, 12, 1507311, 0, 1507312, 0, 1507313, 12, 1507314, 12, 1507315, 12, 1507316, 11, 1507317, 3, 1441825, 5, 1441826, 0, 1441827, 0, 1441828, 3, 1572842, 5, 1572843, 12, 1572844, 6, 1572845, 6, 1572846, 6, 1572847, 0, 1572848, 0, 1572849, 6, 1572850, 6, 1572851, 6, 1572852, 12, 1572853, 3, 1507360, 5, 1507361, 11, 1507362, 0, 1507363, 0, 1507364, 11, 1507365, 3, 1638378, 5, 1638379, 6, 1638380, 0, 1638381, 0, 1638382, 0, 1638383, 0, 1638384, 0, 1638385, 0, 1638386, 0, 1638387, 0, 1638388, 6, 1638389, 3, 1572895, 5, 1572896, 11, 1572897, 12, 1572898, 0, 1572899, 0, 1572900, 12, 1572901, 11, 1572902, 3, 1703914, 5, 1703915, 6, 1703916, 0, 1703917, 6, 1703918, 6, 1703919, 6, 1703920, 6, 1703921, 6, 1703922, 6, 1703923, 0, 1703924, 6, 1703925, 3, 1638431, 5, 1638432, 12, 1638433, 0, 1638434, 0, 1638435, 0, 1638436, 0, 1638437, 12, 1638438, 3, 1769450, 5, 1769451, 6, 1769452, 0, 1769453, 6, 1769454, 1, 1769455, 1, 1769456, 1, 1769457, 1, 1769458, 6, 1769459, 0, 1769460, 6, 1769461, 3, 1703967, 5, 1703968, 0, 1703969, 0, 1703970, 0, 1703971, 0, 1703972, 0, 1703973, 0, 1703974, 3, 1834986, 5, 1834987, 6, 1834988, 0, 1834989, 6, 1834990, 1, 1834991, 13, 1834992, 13, 1834993, 1, 1834994, 6, 1834995, 0, 1834996, 6, 1834997, 3, 1769503, 5, 1769504, 0, 1769505, 0, 1769506, 0, 1769507, 0, 1769508, 0, 1769509, 0, 1769510, 3, 1900522, 5, 1900523, 6, 1900524, 0, 1900525, 6, 1900526, 1, 1900527, 13, 1900528, 13, 1900529, 1, 1900530, 6, 1900531, 0, 1900532, 6, 1900533, 3, 1835039, 5, 1835040, 0, 1835041, 0, 1835042, 0, 1835043, 0, 1835044, 0, 1835045, 2, 1835046, 3, 1966058, 5, 1966059, 6, 1966060, 0, 1966061, 6, 1966062, 1, 1966063, 1, 1966064, 1, 1966065, 1, 1966066, 6, 1966067, 0, 1966068, 6, 1966069, 3, 1900575, 5, 1900576, 0, 1900577, 0, 1900578, 0, 1900579, 0, 1900580, 0, 1900581, 0, 1900582, 3, 2031594, 5, 2031595, 6, 2031596, 0, 2031597, 6, 2031598, 6, 2031599, 6, 2031600, 6, 2031601, 6, 2031602, 6, 2031603, 0, 2031604, 6, 2031605, 3, 1966112, 5, 1966113, 0, 1966114, 0, 1966115, 0, 1966116, 0, 1966117, 3, 2097130, 5, 2097131, 6, 2097132, 0, 2097133, 0, 2097134, 0, 2097135, 0, 2097136, 0, 2097137, 0, 2097138, 0, 2097139, 0, 2097140, 6, 2097141, 3, 2162668, 6, 2162669, 6, 2162670, 6, 2162671, 6, 2162672, 6, 2162673, 6, 2162674, 6, 2162675, 6 )

[node name="Enemy" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 297.223, 178.939 )

[node name="Enemy3" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 189.382, 341.055 )

[node name="Enemy4" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 609.141, 91.4946 )

[node name="Enemy5" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( -232.61, 458.888 )

[node name="Enemy6" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( -412.977, 960.043 )

[node name="Enemy7" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( -601.792, 955.008 )

[node name="Enemy8" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 1236.01, 124.223 )

[node name="Enemy9" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 1079.92, 96.5298 )

[node name="Broken_Panel" type="Sprite" parent="."]

transform/pos = Vector2( 176, 80 )
texture = ExtResource( 4 )

[node name="Broken_Panel1" type="Sprite" parent="."]

transform/pos = Vector2( 720, 16 )
texture = ExtResource( 4 )

[node name="Broken_Panel2" type="Sprite" parent="."]

transform/pos = Vector2( 1232, -16 )
texture = ExtResource( 4 )

[node name="Room1_Area" type="Area2D" parent="."]

transform/pos = Vector2( 1120, 672 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room1_Area"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Room2_Area" type="Area2D" parent="."]

transform/pos = Vector2( 896, 128 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room2_Area"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Room3_Area" type="Area2D" parent="."]

transform/pos = Vector2( -32, 320 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room3_Area"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="Room4_Area" type="Area2D" parent="."]

transform/pos = Vector2( -512, 704 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room4_Area"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="Room1_Area" to="." method="_on_r1_body_enter"]

[connection signal="body_enter" from="Room2_Area" to="." method="_on_r2_body_enter"]

[connection signal="body_enter" from="Room3_Area" to="." method="_on_r3_body_enter"]

[connection signal="body_enter" from="Room4_Area" to="." method="_on_r4_body_enter"]


